# gco11y-size

./: .gitignore  LICENSE  README.md  go.mod
cmd/gco11y-size/: main.go  main_test.go
example/: README.md  example.json  workspace.html  workspace.json
internal/analyzer/: analyzer.go  analyzer_test.go  config_scan.go
internal/analyzer/common/: common.go
internal/analyzer/dotnet/: README.md  analyzer.go  common.go  detector.go
internal/analyzer/framework/: framework.go
internal/analyzer/golang/: README.md  analyzer.go  common.go  detector.go
internal/analyzer/java/: README.md  analyzer.go  common.go  detector.go
internal/analyzer/nodejs/: README.md  analyzer.go  common.go  detector.go
internal/analyzer/python/: README.md  analyzer.go  common.go  detector.go
internal/config/: grafana.go  grafana_test.go  options.go
internal/estimator/: estimator.go  estimator_test.go
internal/model/: model.go
internal/report/: report.go  report_test.go  template.go  workspace_template.go
internal/source/: source.go  source_test.go
testdata/fixtures/dotnet-service/: AppHost.cs  DotnetService.csproj  Program.cs  appsettings.json
testdata/fixtures/go-service/: go.mod  main.go
testdata/fixtures/nodejs-frontend-only/: package.json
testdata/fixtures/nodejs-service/: package.json  serverless.yml
testdata/fixtures/python-library-only/: pyproject.toml
testdata/fixtures/python-service/: pyproject.toml  serverless.yml
testdata/fixtures/python-service/src/: data.py  django_urls.py  flask_app.py  graphql.py  grpc_server.py  main.py  messaging.py  otel.py  views.py
(+90 files in other folders)
